# osb-render

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  conftest.py  main.py  pyproject.toml
apps/: custom_grips.py  dialogs.py  icon_utils.py  main_window.py  sidebar.py  threads.py  title_bar.py  web_gui.py  widgets.py
apps/pages/: __init__.py  about_page.py  home_page.py  settings_page.py
configs/: config.example.yaml  config.yaml
gui/: index.html
gui/css/: base.css  components.css
gui/js/: app.js
scripts/: canvas_demo.py  debug_frame_demo.py  engine_demo.py
src/: __init__.py  config.py  easings.py  jobs.py  managers.py  models.py  parser.py  render.py  render_cv.py  render_skia.py  state_engine.py  video.py
tests/: TWC Sound Team Strike Back Squad - BUZZ CUTZ (Blocko).osb  benchmark.py  test_canvas.py  test_config.py  test_debug_frame.py  test_easings.py  test_engine.py  test_managers.py  test_models.py  test_parser.py  test_state_engine.py  test_video.py  x - xx (9ami).osb
themes/: osboard_dark.qss  osboard_light.qss
