[project]
name = "osboard"
version = "0.1.0"
description = "OSBoard — A high-performance osu! storyboard to MP4 renderer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.10.0",
    "loguru>=0.7.3",
    "nuitka>=2.8.6",
    "pydantic>=2.12.4",
    "pywebview>=6.2.1",
    "pyyaml>=6.0.3",
    "skia-python>=138.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
# Old test files are standalone scripts (not pytest-compatible)
norecursedirs = []
filterwarnings = [
    "ignore::DeprecationWarning",
]
